--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Campus Digital Sphere - Education Reimagined</title>
+    <title>WITS COLLEGE NAMULANDA</title>
     <meta name="description" content="Campus Digital Sphere - A modern educational institution preparing students for the digital age through innovative teaching methods and technology." />
     <meta name="author" content="Campus Digital Sphere" />
 
