--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WITS COLLEGE NAMULANDA</title>
-    <meta name="description" content="Campus Digital Sphere - A modern educational institution preparing students for the digital age through innovative teaching methods and technology." />
+    <meta name="description" content="WITS COLLEGE NAMULANDA - A modern educational institution preparing students for the digital age through innovative teaching methods and technology." />
     <meta name="author" content="Campus Digital Sphere" />
 
-    <meta property="og:title" content="Campus Digital Sphere - Education Reimagined" />
+    <meta property="og:title" content="WITS COLLEGE NAMULANDA - Responsibility, Ethics and Professionalism" />
     <meta property="og:description" content="A modern educational institution preparing students for the digital age through innovative teaching methods and technology." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
