--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WITS COLLEGE NAMULANDA</title>
     <meta name="description" content="WITS COLLEGE NAMULANDA - A modern educational institution preparing students for the digital age through innovative teaching methods and technology." />
-    <meta name="author" content="Campus Digital Sphere" />
+    <meta name="author" content="ckealeb" />
 
     <meta property="og:title" content="WITS COLLEGE NAMULANDA - Responsibility, Ethics and Professionalism" />
     <meta property="og:description" content="A modern educational institution preparing students for the digital age through innovative teaching methods and technology." />
